add replicate plugin

--- a/packages/admin-dashboard/src/locales/pl/channels.json
+++ b/packages/admin-dashboard/src/locales/pl/channels.json
@@ -10,8 +10,8 @@
         "id": "Id",
         "code": "Kod",
         "token": "Token",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewChannel": "Wyświetl kanał",
