--- a/packages/admin-dashboard/src/locales/pl/collections.json
+++ b/packages/admin-dashboard/src/locales/pl/collections.json
@@ -10,8 +10,8 @@
         "name": "Nazwa",
         "isPrivate": "Prywatny",
         "subCollections": "Kolekcje",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "columns": "Kolumny",
         "featuredAsset": "Obraz",
         "breadcrumb": "Breadcrumb",
