--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -1,7 +1,7 @@
 {
     "update": "Aktualizacja",
     "create": "Utwórz",
-    "save": "Zapisywanie",
+    "save": "Zapisz",
     "remove": "Usunąć",
     "upload": "Wgrywanie",
     "cancel": "Anuluj",
@@ -216,7 +216,7 @@
             "active": "Aktywny",
             "additionalInformation": "Dodatkowe informacje",
             "code": "Kod",
-            "createdAt": "Utworzona w",
+            "createdAt": "Utworzono w",
             "currencyCode": "Kod waluty",
             "customerLastName": "Nazwisko klienta",
             "id": "Id",
@@ -232,7 +232,7 @@
             "totalWithTax": "Razem z podatkiem",
             "transactionId": "Identyfikator transakcji",
             "type": "Typ",
-            "updatedAt": "Zaktualizowano o",
+            "updatedAt": "Zaktualizowano w",
             "aggregateOrderId": "Zagregowany identyfikator zamówienia",
             "getProforma": "Pobierz proformę",
             "registeredOnCheckout": "Zarejestrowany przy kasie",
