--- a/packages/admin-dashboard/src/locales/pl/countries.json
+++ b/packages/admin-dashboard/src/locales/pl/countries.json
@@ -11,8 +11,8 @@
         "code": "Kod",
         "name": "Nazwa",
         "enabled": "Włączone",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewCountry": "Wyświetl kraj",
