--- a/packages/admin-dashboard/src/locales/pl/paymentMethods.json
+++ b/packages/admin-dashboard/src/locales/pl/paymentMethods.json
@@ -11,8 +11,8 @@
         "code": "Kod",
         "enabled": "Włączone",
         "modalTitle": "Tytuł modalny",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "columns": "Kolumny"
     },
     "details": {
