--- a/packages/admin-dashboard/src/locales/pl/roles.json
+++ b/packages/admin-dashboard/src/locales/pl/roles.json
@@ -13,8 +13,8 @@
         "code": "Kod",
         "permissions": "Uprawnienia",
         "channels": "Kanały",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewRole": "Wyświetl rolę",
