--- a/packages/admin-dashboard/src/locales/pl/shippingMethods.json
+++ b/packages/admin-dashboard/src/locales/pl/shippingMethods.json
@@ -10,8 +10,8 @@
         "name": "Nazwa",
         "code": "Kod",
         "modalTitle": "Tytuł modalny",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "columns": "Kolumny"
     },
     "details": {
