--- a/packages/admin-dashboard/src/locales/pl/taxCategories.json
+++ b/packages/admin-dashboard/src/locales/pl/taxCategories.json
@@ -9,8 +9,8 @@
         "id": "Id",
         "name": "Nazwa",
         "isDefault": "Jest domyślna",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewTaxCategory": "Wyświetl kategorię podatkową",
