--- a/packages/admin-dashboard/src/locales/pl/taxRates.json
+++ b/packages/admin-dashboard/src/locales/pl/taxRates.json
@@ -13,8 +13,8 @@
         "zone": "Strefa",
         "value": "Stawka",
         "customerGroup": "Grupa klientów",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewTaxRate": "Wyświetl stawkę podatku",
