--- a/packages/admin-dashboard/src/locales/pl/admins.json
+++ b/packages/admin-dashboard/src/locales/pl/admins.json
@@ -10,8 +10,8 @@
         "name": "Nazwa",
         "emailAddress": "E-mail",
         "role": "Rola",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewAdmin": "Wyświetl administratora",
