--- a/packages/admin-dashboard/src/locales/pl/sellers.json
+++ b/packages/admin-dashboard/src/locales/pl/sellers.json
@@ -8,8 +8,8 @@
     "table": {
         "id": "Id",
         "name": "Nazwa",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewSeller": "Wyświetl sprzedawcę",
