--- a/packages/admin-dashboard/src/locales/pl/stockLocations.json
+++ b/packages/admin-dashboard/src/locales/pl/stockLocations.json
@@ -9,8 +9,8 @@
         "id": "Id",
         "name": "Nazwa",
         "description": "Opis",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewStockLocation": "Wyświetl lokalizację zapasów",
