--- a/packages/admin-dashboard/src/locales/pl/zones.json
+++ b/packages/admin-dashboard/src/locales/pl/zones.json
@@ -9,8 +9,8 @@
         "id": "Id",
         "name": "Nazwa",
         "members": "Członkowie",
-        "createdAt": "Utworzona w",
-        "updatedAt": "Zaktualizowano o",
+        "createdAt": "Utworzono w",
+        "updatedAt": "Zaktualizowano w",
         "openMenu": "Otwórz menu",
         "copyId": "Kopiuj identyfikator",
         "viewZone": "Wyświetl strefę",
