--- a/packages/admin-dashboard/src/locales/pl/common.json
+++ b/packages/admin-dashboard/src/locales/pl/common.json
@@ -106,7 +106,7 @@
     "partiallyShipped": "Częściowo wysłane",
     "partiallyFulfilled": "Częściowo zrealizowane",
     "partiallyDelivered": "Częściowo zrealizowane",
-    "delivered": "Dostarczone",
+    "delivered": "Dostarczono",
     "cancelled": "Anulowane",
     "modifying": "Modyfikacja",
     "inRealization": "W realizacji",
