--- a/packages/admin-dashboard/src/locales/en/facets.json
+++ b/packages/admin-dashboard/src/locales/en/facets.json
@@ -5,6 +5,8 @@
   "baseInfoCreated": "Created: {{value}}",
   "baseInfoUpdated": "Updated: {{value}}",
   "requiredError": "This value is required",
+  "buttonDisabledTooltip": "Fill all required fields",
+  "noChangesTooltip": "You have not made any changes",
   "table": {
     "id": "Id",
     "name": "Name",
