--- a/packages/admin-dashboard/src/locales/pl/facets.json
+++ b/packages/admin-dashboard/src/locales/pl/facets.json
@@ -5,6 +5,8 @@
     "baseInfoCreated": "Utworzono: {{value}}",
     "baseInfoUpdated": "Aktualizacja: {{value}}",
     "requiredError": "Ta wartość jest wymagana",
+    "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
+    "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
         "id": "Id",
         "name": "Nazwa",
