--- a/packages/admin-dashboard/src/locales/en/taxRates.json
+++ b/packages/admin-dashboard/src/locales/en/taxRates.json
@@ -5,6 +5,8 @@
   "baseInfoId": "Id: {{value}}",
   "baseInfoCreated": "Created: {{value}}",
   "baseInfoUpdated": "Updated: {{value}}",
+  "buttonDisabledTooltip": "Fill all required fields",
+  "noChangesTooltip": "You have not made any changes",
   "table": {
     "id": "Id",
     "name": "Name",
@@ -44,5 +46,11 @@
     "description": "Are you sure you want to delete this tax rate?",
     "successMessage": "Tax rate has been deleted.",
     "deleteOrCancel": "Delete/Cancel selected"
+  },
+  "validation": {
+    "taxCategoryRequired": "Tax category is required",
+    "zoneRequired": "Zone is required",
+    "nameRequired": "Name is required",
+    "valueRequired": "Value is required"
   }
 }
