--- a/packages/admin-dashboard/src/locales/pl/admins.json
+++ b/packages/admin-dashboard/src/locales/pl/admins.json
@@ -5,6 +5,8 @@
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
     "baseInfoUpdated": "Aktualizacja: {{value}}",
+    "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
+    "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
         "id": "Id",
         "name": "Nazwa",
@@ -45,5 +47,11 @@
         "successMessage": "Administrator został usunięty.",
         "deleteOrCancel": "Usuń/Anuluj zaznaczone"
     },
-    "selectedValue": "{{from}} z {{to}} wybranych wierszy"
+    "selectedValue": "{{from}} z {{to}} wybranych wierszy",
+    "validation": {
+        "firstNameRequired": "Imię jest wymagane",
+        "lastNameRequired": "Nazwisko jest wymagane",
+        "passwordRequired": "Hasło jest wymagane",
+        "rolesRequired": "Wybierz co najmniej jedną rolę"
+    }
 }
