--- a/packages/admin-dashboard/src/locales/pl/promotions.json
+++ b/packages/admin-dashboard/src/locales/pl/promotions.json
@@ -55,5 +55,11 @@
             "Buy amountX of these variants": "Buy amount X of these variants",
             "Get amountY of these variants for free": "Get amount Y of these variants for free"
         }
+    },
+    "validation": {
+        "conditionsCode": "Wymagany jest co najmniej jeden warunek",
+        "conditionsArgs": "Wypełnij wszystkie pola",
+        "actionsCode": "Wymagana jest co najmniej jedna akcja",
+        "actionsArgs": "Wypełnij wszystkie pola"
     }
 }
