--- a/packages/admin-dashboard/src/locales/pl/roles.json
+++ b/packages/admin-dashboard/src/locales/pl/roles.json
@@ -6,6 +6,8 @@
     "baseInfoCreated": "Utworzono: {{value}}",
     "baseInfoUpdated": "Aktualizacja: {{value}}",
     "defaultChannel": "Domyślny kanał",
+    "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
+    "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
         "id": "Id",
         "name": "Nazwa",
@@ -48,5 +50,10 @@
         "successMessage": "Rola została usunięta.",
         "deleteOrCancel": "Usuń/Anuluj zaznaczone"
     },
-    "selectedValue": "{{from}} z {{to}} wybranych wierszy"
+    "selectedValue": "{{from}} z {{to}} wybranych wierszy",
+    "validation": {
+        "nameRequired": "Nazwa jest wymagana",
+        "permissionsRequired": "Wybierz co najmniej jedno uprawnienie",
+        "codeRequired": "Kod jest wymagany"
+    }
 }
