--- a/packages/admin-dashboard/src/locales/pl/taxRates.json
+++ b/packages/admin-dashboard/src/locales/pl/taxRates.json
@@ -5,6 +5,8 @@
     "baseInfoId": "Id: {{value}}",
     "baseInfoCreated": "Utworzono: {{value}}",
     "baseInfoUpdated": "Aktualizacja: {{value}}",
+    "buttonDisabledTooltip": "Wypełnij wszystkie wymagane pola",
+    "noChangesTooltip": "Nie wprowadzono żadnych zmian",
     "table": {
         "id": "Id",
         "name": "Nazwa",
@@ -44,5 +46,11 @@
         "description": "Czy na pewno chcesz usunąć tę stawkę podatku?",
         "successMessage": "Stawka podatku została usunięta.",
         "deleteOrCancel": "Usuń/Anuluj zaznaczone"
+    },
+    "validation": {
+        "taxCategoryRequired": "Kategoria podatkowa jest wymagana",
+        "zoneRequired": "Strefa jest wymagana",
+        "nameRequired": "Nazwa jest wymagana",
+        "valueRequired": "Wartość jest wymagana"
     }
 }
